add reference to guidelines paper

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -54,7 +54,7 @@ Throughout this text we use the term "Limit Reference Point" (LRP) to indicate t
 Some people may use the terms "reference point"  and "management benchmark" interchangeably. --
  -->
 
-Even before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. The DFO policy documents "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@dfoCanadaPolicyConservation2005] already recommended the establishment of reference points to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015]. For Pacific Salmon, lower benchmarks are generally estimated for each CU. These lower benchmarks are the basis for assessing CU status and establishing LRPs for SMUs (groups of CUS). The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been adopted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], Fraser coho [@deckerAssessmentInteriorFraser2014; @dfoWildSalmonPolicy2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
+Before the royal assent of the revised fisheries act in 2019, many fisheries in Canada already had LRPs defined as part of their management framework. The DFO policy documents "Harvest Decision-Making Framework Incorporating the Precautionary Approach" [@dfoHarvestStrategyCompliant2006] and "Canada's Policy for conservation of Wild Pacific Salmon" [@dfoCanadaPolicyConservation2005] already recommended the establishment of reference points to protect fish stocks serious harm to managed populations. In compliance with these policies LRPs have been implemented in various marine fisheries across Canada [@marentetteSpecificationPrecautionaryApproach2021], examples include Pacific Herring [@kronlundSelectionRoleLimit2018], snow crab [@mullowneyBasisPrecautionaryApproach2018], lobster [@cookFrameworkAssessmentOffshore2017], Atlantic salmon [@chaputConsiderationsDefiningReference2015]. For Pacific Salmon, lower benchmarks are generally estimated for each CU. These lower benchmarks are the basis for assessing CU status and establishing LRPs for SMUs (groups of CUS). The recommended lower benchmark is $Sgen$, i.e., the spawner abundances that will result in recovery to $S_{MSY}$ in one generation under equilibrium conditions, although alternative quantities can be used in the absence of the required data to estimate $Sgen$ [@holtEvaluationBenchmarksConservation2009]. Lower benchmarks have been adopted for many Pacific Salmon CUs, including Fraser River sockeye salmon [@bradfordStatusCultusLake2010; @grantEvaluationUncertaintyFraser2011], coho salmon [@deckerAssessmentInteriorFraser2014; @dfoWildSalmonPolicy2015; @nobleHabitatbasedEscapementBenchmarks2015] , chum salmon [@godboutStockStatusWild2004], and chinook salmon [@dfoIntegratedBiologicalStatus2016].
 
 
 <!--
