--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -21,11 +21,11 @@ For example, in the Inside South Coast Chum - Non-Fraser study case, the LRP was
 
 The Logistic regression-based LRPs are empirically derived from the past observations of SMU abundance and CU statuses. In this method we apply a logistic regression to identify historical abundance levels associated with probabilities that all CUs within an SMU have statuses above the red zone or above their lower benchmarks. Similarly to the proportion-based LRP, this aggregate abundance method depends on the outcomes of individual CU assessment, which are sensitive to the method chosen for the assessment and the data availability. 
 
-The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. In addition, individual CU must have moderate to high level of covariation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho (correlation with CUS of XX) but not estimable for Inside South Coast Chum - Non-Fraser (correlation within CUs of XX). Additional factors for the poor fit of the logistic regression-based LRPs for the Inside South Coast Chum - Non-Fraser study case include the presumed wide range of productivity and capacity values for the CUs within taht SMU. 
+The Logistic regression-based LRP is only estimable when there are years when all CUs or sub-populations are above their lower benchmark and years when at least one CU is below their lower benchmarks. This was not the case for the WCVI Chinook study case due to one inlet always been below its lower benchmark. In addition, individual CU must have moderate to high level of correlation, so that the aggregate abundance of the SMU is a good indicator of individual CU status. The case studies shown in this paper show that logistic regression-based LRPs were estimable for interior Fraser coho (correlation with CUS of XX) <!--I remember seeing the values of correlation between CU escapements(?), but I cannot find it in the current text. Where could I find those numbers? --> but not estimable for Inside South Coast Chum - Non-Fraser (correlation within CUs of XX). Additional factors for the poor fit of the logistic regression-based LRPs for the Inside South Coast Chum - Non-Fraser study case include the presumed wide range of productivity and capacity values for the CUs within taht SMU. 
 
 Missing data for individual CUs within an SMU may also pose a problem for the estimation of logistic regression-based LRPs. When data is missing for one or more CUs within and SMU, it may still be appropriate to apply the logistic regression-based LRP to the remaining CUs with data to assess status for the entire SMU. This is particularly true if there are high levels of covariation between the CUs. However, the logistic regression model fit will degenerate as the number of CUs with missing data increases. Sensitivity analysis for the Interior Fraser Coho study case showed that the model fit degenerated when two CU data sets were removed from the analysis. 
 
-Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In Chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this method.   
+Finally, it is important to inspect model diagnostics and statistically test the model assumptions whenever applying the logistic regression-based LRPs. In chapter \@ref(lrp-estimation-methods) we provide a list of model diagnostics that should be checked when applying this aggregate abundance LRP estimation method. In addition, we illustrate how the diagnostics are used in support of the model fit in chapter \@ref(IFCChapter), and against the model fit in the \@ref(ISCchumChapter).    
 
 ### Projection based LRPs
 
@@ -33,11 +33,11 @@ Finally, it is important to inspect model diagnostics and statistically test the
 Question: Why did we not apply the projection-based LRP to the Chum study case? Was is because we had no means of estimating the SR parameters for the Chum CUs? If that is the case, would it be correct to say that the projection-based LRP is not appropriate for data poor scenarios? 
 -->
 
-The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a pre-defined level of expoitation. The most important requirement for the application of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU. Parameter estimates for productivity and capacity can be provided based on single parameter estimates, e.g., parameters derived based on expert input, life-stage models or watershed model estimates (see WCVI Chinook study case, chapter \@ref(#WCVIchinookChapter)) or posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(#IFCChapter)). We did not estimate projection-based LRPs for Inside South Coast Chum - Non-Fraser study case because estimates of capacity and productivity were not available for the CUs within that SMU. 
+The projection-based LRPs approach relies on closed-loop simulation model to project future CU abundances. These projections are then used to identify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a pre-defined level of expoitation. The most important requirement for the application of projection-based LRPs is the availability of information on productivity and capacity for the CUs within an SMU. Parameter estimates for productivity and capacity can be provided based on single parameter estimates, e.g., parameters derived based on expert input, life-stage models or watershed model estimates (see WCVI Chinook study case, chapter \@ref(WCVIchinookChapter)) or posterior distributions from stock recruitment analyses (see interior Fraser Coho study case, chapter \@ref(IFCChapter)). We did not estimate projection-based LRPs for Inside South Coast Chum - Non-Fraser study case because estimates of capacity and productivity were not available for the CUs within that SMU. 
 
 The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI chinook study case, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the interior Fraser coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
-We also demonstrated that the projection-based LRPs is sensitive to the assumed levels of exploitation rate in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability among stock-recruitment parameters increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(#sensitivity-of-projection-based-lrps-to-exploitation-rates). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
+We also demonstrated that the projection-based LRPs is sensitive to the assumed levels of exploitation rate in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability among stock-recruitment parameters increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(sensitivity-of-projection-based-lrps-to-exploitation-rates). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
  
 
 
